# 3DViewer_v2.0

./: .gitignore  CMakeLists.txt  README.md
src/: .clang-format
src/Object3D/: Object3D.cpp  Object3D.h
src/Object3D/tests/: FromFile.cpp
